--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>this is uk south upload</h1>
-<p>this is uk south upload</p>
+<h1>this is Main upload</h1>
+<p>this is welcome upload</p>
 <form method = 'POST', enctype="multipart/form-data">
     {{form.hidden_tag()}}
     {{form.file()}}
