--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1>this is Main upload</h1>
+<h1>this is Main upload</h1>
 <p>this is welcome upload</p>
 <form method = 'POST', enctype="multipart/form-data">
     {{form.hidden_tag()}}
