--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,8 @@
 <body>
 
 <h1>this is Main upload</h1>
-<<<<<<< HEAD
-<h1>this is Main upload</h1>
-=======
->>>>>>> 6996f5793ec7dce22337940e913ace52e6ab4704
-<p>this is welcome upload</p>
+<p>this is Not a uploadpage</p>
+
 <form method = 'POST', enctype="multipart/form-data">
     {{form.hidden_tag()}}
     {{form.file()}}
